feat:create screen gameover

--- a/PoldoWord-SM-Project-main-MODIFIED/index.html
+++ b/PoldoWord-SM-Project-main-MODIFIED/index.html
@@ -43,5 +43,12 @@
       </div>
       <div id="score" class="score">Score: 0</div>
     </div>
+
+    <div id="game-over" class="game-over-screen" style="display: none;">
+      <h1>Game Over</h1>
+      <button class="restart-button" onclick="restartGame()">Restart</button>
+      <button class="menu-button" onclick="returnToMenu()">Menu</button>
+    </div>
+    
   </body>
 </html>
