inserting grass image

--- a/PoldoWord-SM-Project-main-MODIFIED/index.html
+++ b/PoldoWord-SM-Project-main-MODIFIED/index.html
@@ -42,6 +42,9 @@
         <img src="./images/pipe.png" alt="tubo" class="pipe" />
       </div>
       <div id="score" class="score">Score: 0</div>
+      <div>
+        <img src="./images/grama.png" alt="grama" class="grass" />
+      </div>
     </div>
 
     <div id="game-over" class="game-over-screen" style="display: none;">
