--- a/PoldoWord-SM-Project-main-MODIFIED/index.html
+++ b/PoldoWord-SM-Project-main-MODIFIED/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" defer></script>
 
-    <title>Mario Jump</title>
+    <title>Poldo World</title>
   </head>
   <body>
     <div id="menu" class="menu">
