adding some logo animation

--- a/PoldoWord-SM-Project-main-MODIFIED/index.html
+++ b/PoldoWord-SM-Project-main-MODIFIED/index.html
@@ -12,7 +12,7 @@
   <body>
     <div id="menu" class="menu">
       <div class="logo-container">
-        <img class="logo" src="./images/logo.png" alt="logo" />
+        <img id="logo" src="./images/logo.png" alt="logo" />
       </div>
       <div class="input-container">
         <label class="label-player-name" for="playerName"
