--- a/PoldoWord-SM-Project-main-MODIFIED/index.html
+++ b/PoldoWord-SM-Project-main-MODIFIED/index.html
@@ -11,6 +11,9 @@
   </head>
   <body>
     <div id="menu" class="menu">
+      <audio id="audio" autoplay >
+        <source src="./media/mario-music.mp3" type="audio/mp3">
+      </audio>
       <div class="logo-container">
         <img id="logo" src="./images/logo.png" alt="logo" />
       </div>
