--- a/PoldoWord-SM-Project-main-MODIFIED/index.html
+++ b/PoldoWord-SM-Project-main-MODIFIED/index.html
@@ -39,7 +39,7 @@
       <div class="game-board">
         <img src="./images/clouds.png" alt="nuvens" class="clouds" />
         <img src="./images/mario.gif" alt="mario" class="mario" />
-        <img src="./images/pipe.png" alt="tubo" class="pipe" />
+        <img src="./images/pipe2.png" alt="tubo" class="pipe" />
       </div>
       <div id="score" class="score">Score: 0</div>
       <div>
