--- a/PoldoWord-SM-Project-main-MODIFIED/index.html
+++ b/PoldoWord-SM-Project-main-MODIFIED/index.html
@@ -1,54 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <script src="./js/script.js" defer></script>
 
-  <link rel="stylesheet" href="./css/style.css" />
-  <script src="./js/script.js" defer></script>
+    <title>Poldo World</title>
+  </head>
+  <body>
+    <div id="menu" class="menu">
+      <audio id="audio" autoplay>
+        <source src="./media/mario-music.mp3" type="audio/mp3" />
+      </audio>
+      <div class="logo-container">
+        <img id="logo" src="./images/logo.png" alt="logo" />
+      </div>
+      <div class="input-container">
+        <label class="label-player-name" for="playerName">Nome do jogador:</label>
+        <input type="text" id="playerName" placeholder="Poldo" class="player-name-input" />
+      </div>
+      <div class="ranking-container">
+        <span id="ranking"></span>
+        <button class="clear-button" onclick="clearLocalStorage()">Clear Data</button>
+      </div>
 
-  <title>Poldo World</title>
-</head>
-
-<body>
-  <div id="menu" class="menu">
-    <audio id="audio" autoplay>
-      <source src="./media/mario-music.mp3" type="audio/mp3">
-    </audio>
-    <div class="logo-container">
-      <img id="logo" src="./images/logo.png" alt="logo" />
+      <button class="start-button" onclick="confirmNameAndStartGame()">START</button>
     </div>
-    <div class="input-container">
-      <label class="label-player-name" for="playerName">Nome do jogador:</label>
-      <input type="text" id="playerName" placeholder="Poldo" class="player-name-input" />
+
+    <div id="game" class="game-container" style="display: none">
+      <div class="game-board">
+        <img src="./images/clouds.png" alt="nuvens" class="clouds" />
+        <img src="./images/mario.gif" alt="mario" class="mario" />
+        <img src="./images/pipe2.png" alt="tubo" class="pipe" />
+        <div class="grass">
+          <img src="./images/grama.png" alt="">
+        </div> <!-- Grama adicionada aqui -->
+      </div>
+      <div id="score" class="score">Score: 0</div>
     </div>
-    <div class="ranking-container">
-      <span id="ranking"></span>
-      <button class="clear-button" onclick="clearLocalStorage()">Clear Data</button>
+
+    <div id="game-over" class="game-over-screen" style="display: none;">
+      <h1>Game Over</h1>
+      <button class="restart-button" onclick="restartGame()">Restart</button>
+      <button class="menu-button" onclick="returnToMenu()">Menu</button>
     </div>
 
-    <button class="start-button" onclick="confirmNameAndStartGame()">START</button>
-  </div>
-
-  <div id="game" class="game-container" style="display: none">
-    <div class="game-board">
-      <img src="./images/clouds.png" alt="nuvens" class="clouds" />
-      <img src="./images/mario.gif" alt="mario" class="mario" />
-      <img src="./images/pipe2.png" alt="tubo" class="pipe" />
-      <div class="grass">
-        <img src="./images/grama.png" alt="">
-      </div> <!-- Grama adicionada aqui -->
-    </div>
-    <div id="score" class="score">Score: 0</div>
-  </div>
-
-  <div id="game-over" class="game-over-screen" style="display: none;">
-    <h1>Game Over</h1>
-    <button class="restart-button" onclick="restartGame()">Restart</button>
-    <button class="menu-button" onclick="returnToMenu()">Menu</button>
-  </div>
-
-</body>
-
+    <audio id="jumpSound" src="./media/pulo.mp3" preload="auto"></audio>
+    <audio id="deathSound" src="./media/morte.mp3" preload="auto"></audio> <!-- Som da morte adicionado -->
+  </body>
 </html>
